# Yalantis_Python_School_Test

./: .pre-commit-config.yaml  manage.py  pyproject.toml
Yalantis_Python_School_Test/: asgi.py  settings.py  urls.py  wsgi.py
