[tool.poetry]
name = "yalantis_python_school_test"
version = "0.1.0"
description = ""
authors = ["Mr. Oleksandr Tarasov <tarasik201617@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
black = "^21.12b0"
mypy = "^0.910"
pylint = "^2.12.2"
isort = "^5.10.1"
pre-commit-hooks = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
